test: LottoPaper 여러 로또와 당첨 번호를 비교하도록 변경